--- a/style/style.css
+++ b/style/style.css
@@ -364,3 +364,58 @@ progress::-moz-progress-bar {
 	-webkit-text-stroke-width: 0.5px;
   	-webkit-text-stroke-color: black;
 }
+input{
+	
+	width: 15%;
+	
+}
+.contact-page{
+	
+	padding-bottom: 10px;
+	
+}
+button{
+	
+	border-radius: 10px;
+	background-color: var(--t1-colour)
+	
+}
+.modal{
+	
+	width: auto;
+	height: auto;
+	
+}
+.modal_close_btn{
+	
+	padding: 5px;
+	border-radius: 5px;
+	
+}
+.modal_close_btn:hover{
+	
+	color: var(--t1-colour);
+	text-decoration: none;
+	
+}
+.coutdown-header{
+	
+	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	color: var(--t1-colour);
+	font-weight: bold;
+	-webkit-text-stroke-width: 0.5px;
+  	-webkit-text-stroke-color: black;
+	
+}
+#countdown{
+	
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	font-size: 50px;
+	-webkit-text-stroke-width: 0.5px;
+  	-webkit-text-stroke-color: var(--t1-colour);
+	
+}
