--- a/css/style.css
+++ b/css/style.css
@@ -210,55 +210,7 @@ a{
 	margin: 10px;
 	
 }
-@media only screen and (max-width: 767px) {
-  	#banner-img {
-		background-image:
-			linear-gradient(132deg, rgba(181,117,7,0) 38%, rgba(197,128,4,1) 90%),
-			url("../images/header_mobile.png");
-		background-size: cover;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-position: center center;
-		width: auto;
-		height: 800px;
-  	}
-	#banner-img .header-text{
-		
-		position: absolute;
-  		bottom: 50px;
-		right: 10px;
-		color: white;
-		font-weight: bold;
-		font-size: 100px;
-		text-align: right;
-	
-	}
-	
-	.footer-text{
-	
-	font-size: 10px;
-	vertical-align:middle;
-	float:left;
-	line-height: 38px;
-	color: var(--t1-colour);
-	-webkit-text-stroke-width: 0.5px;
-  	-webkit-text-stroke-color: black;
-		
-	
-	}
-	
-	#theme{
-		
-		
-		display: none;
-	}
-	.music-jmb{
-		
-		
-		display: none;
-	}
-	
-}
+
 
 
 .fab{
@@ -416,6 +368,61 @@ button{
 	font-weight: bold;
 	font-size: 50px;
 	-webkit-text-stroke-width: 0.5px;
-  	-webkit-text-stroke-color: var(--t1-colour);
+  	-webkit-text-stroke-color: var(--t1-colour)
+	
+}
+
+@media only screen and (max-width: 767px) {
+  	#banner-img {
+		background-image:
+			linear-gradient(132deg, rgba(181,117,7,0) 38%, rgba(197,128,4,1) 90%),
+			url("../images/header_mobile.png");
+		background-size: cover;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		background-position: center center;
+		width: auto;
+		height: 800px;
+  	}
+	#banner-img .header-text{
+		
+		position: absolute;
+  		bottom: 50px;
+		right: 10px;
+		color: white;
+		font-weight: bold;
+		font-size: 100px;
+		text-align: right;
+	
+	}
+	
+	.footer-text{
+	
+	font-size: 10px;
+	vertical-align:middle;
+	float:left;
+	line-height: 38px;
+	color: var(--t1-colour);
+	-webkit-text-stroke-width: 0.5px;
+  	-webkit-text-stroke-color: black;
+		
+	
+	}
+	
+	#theme{
+		
+		
+		display: none;
+	}
+	.music-jmb{
+		
+		
+		display: none;
+	}
+	input{
+	
+	 	width: 100%;
+	
+	}
 	
 }
